--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,13 +12,13 @@
     <artifactId>kodprodoprom</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>KodProDobro</name>
-    <description>KodProDobro Backend</description>
+    <description>KodProDobro</description>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mapstruct.version>1.6.0</mapstruct.version>
-        <lombok.version>1.18.34</lombok.version>
+        <lombok.version>1.18.40</lombok.version>
     </properties>
 
     <dependencies>
