--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@google/genai": "^1.28.0",
     "@hookform/resolvers": "^5.2.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.20.0",
+    "@tanstack/react-query-devtools": "^5.20.0",
     "autoprefixer": "^10.4.23",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
-    "tailwindcss": "^4.1.18",
+    "react-router-dom": "^6.22.0",
+    "tailwindcss": "^3.4.19",
     "zod": "^4.3.5"
   },
   "devDependencies": {
